--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,25 +1,24 @@
-[project]
-name = "backend"
+[tool.poetry]
+name = "api"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "thallys",email = "thallys.rc@gmail.com"}
-]
-readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "fastapi (==0.121.2)",
-    "gunicorn (==23.0.0)",
-    "sqlalchemy (==2.0.44)",
-    "psycopg2-binary (==2.9.11)",
-    "azure-storage-blob (==12.27.1)",
-    "python-multipart (==0.0.20)",
-    "uvicorn (==0.38.0)",
-    "pydantic (==2.12.4)",
-    "pydantic-settings (==2.12.0)"
-]
+authors = ["thallys <thallys.rc@gmail.com>"]
 
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.13"
+fastapi = "^0.121.1"
+uvicorn = "^0.38.0"
+gunicorn = "^23.0.0"
+sqlalchemy = "^2.0.44"
+psycopg2-binary = "^2.9.11"
+azure-storage-blob = "^12.27.1"
+python-multipart = "^0.0.20"
+python-dotenv = "^1.2.1"
+pydantic-settings = "==2.12.0"
+pydantic = "^2.12.4"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
