--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   backend:
     build:
-      context: ./backend
+      context: ./
       target: development
       dockerfile: app/infrastructure/Dockerfile
     container_name: backend
@@ -9,22 +9,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./backend:/code
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-      target: development
-    container_name: frontend_app
-    command: ["npm", "run", "dev", "--", "--host"]
-    ports:
-      - "5173:5173"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    environment:
-      VITE_API_URL: "http://localhost:8000"
+      - ./:/code
 
   postgres:
     image: postgres:15
