--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ python-multipart = "^0.0.20"
 python-dotenv = "^1.2.1"
 pydantic-settings = "==2.12.0"
 pydantic = "^2.12.4"
+celery = "^5.6.0"
+redis = "^7.1.0"
+flower = "^2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
